[package]
name = "lnr"
version = "0.2.0"
authors = ["Alan Vardy <alan@vardy.cc>"]
edition = "2021"
license = "MIT"
description = "A tiny unofficial Linear client"
readme = "README.md"
homepage = "https://github.com/alanvardy/lnr"
repository = "https://github.com/alanvardy/lnr"
keywords = ["cli", "linear", "client", "tickets"]
categories = ["command-line-utilities"]

[dependencies]
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
dirs = "5.0"
matches = "0.1.10"
regex = "1"
chrono = "0.4.31"
chrono-tz = "0.9.0"
colored = "2.0.4"
clap = { version = "4.5.16", features = ["derive"] }
spinners = "4.1.0"
inquire = { version = "0.7.5", features = ["editor"] }
rand = "0.8.5"
pretty_assertions = "1.4.0"
toml = "0.8.19"
walkdir = "2.3.3"
handlebars = "6.0.0"

[dev-dependencies]
mockito = "1.2.0"
pretty_assertions = "1.4.0"
